--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StarWars"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".di.App"
+
+        >
         <activity
             android:name=".MainActivity"
             android:exported="true"
